fix(table): change `pre-wrap` class to `preserve`

--- a/packages/react/src/components/Table/TableCellRenderer/_table-cell-renderer.scss
+++ b/packages/react/src/components/Table/TableCellRenderer/_table-cell-renderer.scss
@@ -29,6 +29,6 @@
   white-space: nowrap;
 }
 
-.#{$iot-prefix}--table__cell-text--pre-wrap {
+.#{$iot-prefix}--table__cell-text--preserve {
   white-space: pre;
 }
